--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="style.css">
-	<title>KinFit</title>
+	<title>Pulse-Watt</title>
 </head>
 
 <body>
 
 	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> KinFit</a>
+		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> Pulse-Watt</a>
 		<ul class="side-menu">
 			<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
 			<li class="divider" data-text="main">Main</li>
@@ -69,7 +69,7 @@
 							<i class='bx bx-trending-up icon'></i>
 						</div>
 						<span class="progress" data-value="40%"></span>
-						<span class="label">Loading...</span>
+						<!-- <span class="label">Loading...</span> -->
 					</div>
 				</a>
 				<a href="page2.html" class="card-link">
@@ -81,7 +81,7 @@
 							<i class='bx bx-trending-down icon down'></i>
 						</div>
 						<span class="progress" data-value="60%"></span>
-						<span class="label">Loading...</span>
+						<!-- <span class="label">Loading...</span> -->
 					</div>
 				</a>
 				<a href="page3.html" class="card-link">
@@ -93,7 +93,7 @@
 							<i class='bx bx-trending-up icon'></i>
 						</div>
 						<span class="progress" data-value="30%"></span>
-						<span class="label">Loading...</span>
+						<!-- <span class="label">Loading...</span> -->
 					</div>
 				</a>
 			</div>
@@ -133,28 +133,28 @@
 								<img src="https://randomuser.me/api/portraits/men/1.jpg" alt="">
 								<div class="details">
 									<span class="username">John Doe</span>
-									<span class="score">Loading...</span>
+									<span class="score">1250 Wh</span>
 								</div>
 							</div>
 							<div class="player">
 								<img src="https://randomuser.me/api/portraits/women/2.jpg" alt="">
 								<div class="details">
 									<span class="username">Jane Smith</span>
-									<span class="score">Loading...</span>
+									<span class="score">1000 Wh</span>
 								</div>
 							</div>
 							<div class="player">
 								<img src="https://randomuser.me/api/portraits/men/3.jpg" alt="">
 								<div class="details">
 									<span class="username">Michael Brown</span>
-									<span class="score">Loading...</span>
+									<span class="score"> 800 Wh</span>
 								</div>
 							</div>
 							<div class="player">
 								<img src="https://randomuser.me/api/portraits/women/4.jpg" alt="">
 								<div class="details">
 									<span class="username">Emily Davis</span>
-									<span class="score">Loading...</span>
+									<span class="score">700 Wh</span>
 								</div>
 							</div>
 						</div>
