--- a/login.html
+++ b/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KinFit Login</title>
+    <title>Pulse-Watt Login</title>
     <link rel="stylesheet" href="loginstyle.css">
 </head>
 <body>
     <div class="container">
-        <div class="title">KINFIT</div>
+        <div class="title">Pulse-Watt</div>
         <div class="selection">
             <div class="option" onclick="selectRole('Owner')" id="owner">Owner</div>
             <div class="option" onclick="selectRole('Member')" id="member">Member</div>
