--- a/members.html
+++ b/members.html
@@ -7,14 +7,14 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="memberstyles.css">
-	<title>KinFit</title>
+	<title>Pulse-Watt</title>
 </head>
 
 <body>
 
 	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> KinFit</a>
+		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> Pulse-Watt</a>
 		<ul class="side-menu">
 			<li><a href="index.html	" class=""><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
 			<li class="divider" data-text="main">Main</li>
