--- a/page1.html
+++ b/page1.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="page1style.css">
-  <title>KinFit - Stationary Bike Data</title>
+  <title>Pulse-Watt - Stationary Bike Data</title>
 </head>
 
 <body>
   <!-- SIDEBAR -->
   <section id="sidebar">
-    <a href="#" class="brand"><i class='bx bxs-smile icon'></i> KinFit</a>
+    <a href="#" class="brand"><i class='bx bxs-smile icon'></i> Pulse-Watt</a>
     <ul class="side-menu">
       <li><a href="index.html"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
       <li class="divider" data-text="main">Main</li>
@@ -79,7 +79,7 @@
             <div class="head">
               <div>
                 <h2>Temperature</h2>
-                <p>Temperature by Stationary Bike</p>
+                <p>Temperature ( Real Time Heat Monitoring of Product</p>
               </div>
               <i class='bx bx-trending-up icon'></i>
             </div>
@@ -121,7 +121,7 @@
             <div class="head">
               <div>
                 <h2>Total Energy</h2>
-                <p>Energy Generated</p>
+                <p>Energy Generated (Wh)</p>
               </div>
               <i class='bx bx-trending-up icon'></i>
             </div>
