--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</ul>
 			</li>
 			<li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
-			<li><a href="#"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
