--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
         </ul>
       </li>
       <li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
-      <li><a href="#"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+      <li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
     </ul>
   </section>
   <!-- SIDEBAR -->
@@ -79,7 +79,7 @@
             <div class="head">
               <div>
                 <h2>Temperature</h2>
-                <p>Temperature ( Real Time Heat Monitoring of Product</p>
+                <p>Temperature (Real Time Heat Monitoring of Product)</p>
               </div>
               <i class='bx bx-trending-up icon'></i>
             </div>
@@ -131,6 +131,7 @@
           </div>
         </a>
       </div>
+
 
       <table>
         <thead>
