--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 				<ul class="side-dropdown">
 					<li><a href="#">Real Time Alerts</a></li>
 					<li><a href="#">Equipment Status</a></li>
-					<li><a href="#">Total Energy Generated</a></li>
+					<!-- <li><a href="#">Total Energy Generated</a></li> -->
 				</ul>
 			</li>
 			<li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
 			<li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="page1.html"><i class='bx bxs-widget icon'></i> Total Energy Generated</a></li>
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
