--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,7 @@
         <ul class="side-dropdown">
           <li><a href="#">Real Time Alerts</a></li>
           <li><a href="#">Equipment Status</a></li>
-          <li><a href="#">Total Energy Generated</a></li>
+          <!-- <li><a href="#">Total Energy Generated</a></li> -->
         </ul>
       </li>
       <li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
