--- a/index.html
+++ b/index.html
@@ -1,55 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pulse-Watt Login</title>
-    <link rel="stylesheet" href="loginstyle.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="style.css">
+	<title>Pulse-Watt</title>
 </head>
+
 <body>
-    <div class="container">
-        <div class="title">Pulse-Watt</div>
-        <div class="selection">
-            <div class="option" onclick="selectRole('Owner')" id="owner">Owner</div>
-            <div class="option" onclick="selectRole('Member')" id="member">Member</div>
-        </div>
-        <form class="login-form" onsubmit="return validateLogin(event)">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <p class="error-message" id="error-message"></p>
-        </form>
-    </div>
-    
-    <script>
-        let selectedRole = '';
 
-        function selectRole(role) {
-            selectedRole = role;
-            document.getElementById('error-message').textContent = '';
-            document.getElementById('owner').classList.remove('active');
-            document.getElementById('member').classList.remove('active');
-            document.getElementById(role.toLowerCase()).classList.add('active');
-        }
+	<!-- SIDEBAR -->
+	<section id="sidebar">
+		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> Pulse-Watt</a>
+		<ul class="side-menu">
+			<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
+			<li class="divider" data-text="main">Main</li>
+			<li>
+				<a href="#"><i class='bx bxs-inbox icon'></i> Analytics <i
+						class='bx bx-chevron-right icon-right'></i></a>
+				<ul class="side-dropdown">
+					<li><a href="#">Real Time Alerts</a></li>
+					<li><a href="#">Equipment Status</a></li>
+					<!-- <li><a href="#">Total Energy Generated</a></li> -->
+				</ul>
+			</li>
+			<li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
+			<li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="page1.html"><i class='bx bxs-widget icon'></i> Total Energy Generated</a></li>
+		</ul>
+	</section>
+	<!-- SIDEBAR -->
 
-        function validateLogin(event) {
-            event.preventDefault();
-            const username = document.getElementById('username').value.trim();
-            const password = document.getElementById('password').value.trim();
-            const errorMessage = document.getElementById('error-message');
+	<!-- NAVBAR -->
+	<section id="content">
+		<!-- NAVBAR -->
+		<nav>
+			<i class='bx bx-menu toggle-sidebar'></i>
+			<form action="#">
+			</form>
+			<span class="divider"></span>
+			<div class="profile">
+				<img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+					alt="">
+				<ul class="profile-link">
+					<li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
+					<li><a href="#"><i class='bx bxs-cog'></i> Settings</a></li>
+					<li><a href="login.html"><i class='bx bxs-log-out-circle'></i> Logout</a></li>
+				</ul>
+			</div>
+		</nav>
+		<!-- NAVBAR -->
 
-            if (!selectedRole) {
-                errorMessage.textContent = 'Please select a role.';
-                return false;
-            }
-            if (username === '' || password === '') {
-                errorMessage.textContent = 'Both fields are required.';
-                return false;
-            }
-            alert(`Logged in as ${selectedRole}: ${username}`);
-            window.location.href = 'index.html'; // Redirect
-            return true;
-        }
-    </script>
+		<!-- MAIN -->
+		<main>
+			<ul class="breadcrumbs">
+				<li><a href="index.html">Home</a></li>
+				<li class="divider">/</li>
+				<li><a href="#" class="active">Dashboard</a></li>
+			</ul>
+			<div class="info-data">
+				<a href="page1.html" class="card-link">
+					<div class="card">
+						<div class="head">
+							<div>
+								<h2>Stationary Bike</h2>
+							</div>
+							<i class='bx bx-trending-up icon'></i>
+						</div>
+						<span class="progress" data-value="40%"></span>
+						<!-- <span class="label">Loading...</span> -->
+					</div>
+				</a>
+				<a href="page2.html" class="card-link">
+					<div class="card">
+						<div class="head">
+							<div>
+								<h2>Step Runner</h2>
+							</div>
+							<i class='bx bx-trending-down icon down'></i>
+						</div>
+						<span class="progress" data-value="60%"></span>
+						<!-- <span class="label">Loading...</span> -->
+					</div>
+				</a>
+				<a href="page3.html" class="card-link">
+					<div class="card">
+						<div class="head">
+							<div>
+								<h2>Treadmill</h2>
+							</div>
+							<i class='bx bx-trending-up icon'></i>
+						</div>
+						<span class="progress" data-value="30%"></span>
+						<!-- <span class="label">Loading...</span> -->
+					</div>
+				</a>
+			</div>
+			<div class="data">
+				<div class="content-data">
+					<div class="head">
+						<h3>Energy Report</h3>
+						<div class="menu">
+							<i class='bx bx-dots-horizontal-rounded icon'></i>
+							<ul class="menu-link">
+								<li><a href="#">Edit</a></li>
+								<li><a href="#">Save</a></li>
+								<li><a href="#">Remove</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="chart">
+						<div id="chart"></div>
+					</div>
+				</div>
+				<div class="content-data">
+					<div class="content-data">
+						<div class="head">
+							<h3>Leaderboard</h3>
+							<div class="menu">
+								<i class='bx bx-dots-horizontal-rounded icon'></i>
+								<ul class="menu-link">
+									<li><a href="#">Refresh</a></li>
+									<li><a href="#">Export</a></li>
+									<li><a href="#">Settings</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="leaderboard-box">
+							<p class="day"><span>Top Contributors</span></p>
+							<div class="player">
+								<img src="https://randomuser.me/api/portraits/men/1.jpg" alt="">
+								<div class="details">
+									<span class="username">John Doe</span>
+									<span class="score">1250 Wh</span>
+								</div>
+							</div>
+							<div class="player">
+								<img src="https://randomuser.me/api/portraits/women/2.jpg" alt="">
+								<div class="details">
+									<span class="username">Jane Smith</span>
+									<span class="score">1000 Wh</span>
+								</div>
+							</div>
+							<div class="player">
+								<img src="https://randomuser.me/api/portraits/men/3.jpg" alt="">
+								<div class="details">
+									<span class="username">Michael Brown</span>
+									<span class="score"> 800 Wh</span>
+								</div>
+							</div>
+							<div class="player">
+								<img src="https://randomuser.me/api/portraits/women/4.jpg" alt="">
+								<div class="details">
+									<span class="username">Emily Davis</span>
+									<span class="score">700 Wh</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+		<!-- MAIN -->
+	</section>
+	<!-- NAVBAR -->
+
+	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+	<script src="script.js"></script>
+	<script>
+		// Fetch live sensor data from the backend and update dashboard cards
+		fetch('https://pulsewatt-backend.onrender.com/data')
+			.then(response => response.json())
+			.then(data => {
+				// If the server returns a single object instead of an array, wrap it
+				if (!Array.isArray(data)) {
+					data = [data];
+				}
+
+				// Loop over each sensor record
+				data.forEach(sensor => {
+					if (sensor.equipmentID === 1) {
+						// Update Stationary Bike card
+						const bikeCard = document.querySelector('a.card-link[href="page1.html"] .card');
+						if (bikeCard) {
+							bikeCard.querySelector('h2').textContent = "Stationary Bike (" + sensor.rpm + " RPM)";
+							bikeCard.querySelector('.label').textContent = sensor.voltage + " V";
+						}
+					} else if (sensor.equipmentID === 2) {
+						// Update Step Runner card
+						const stepCard = document.querySelector('a.card-link[href="page2.html"] .card');
+						if (stepCard) {
+							stepCard.querySelector('h2').textContent = "Step Runner (" + sensor.rpm + " RPM)";
+							stepCard.querySelector('.label').textContent = sensor.voltage + " V";
+						}
+					} else if (sensor.equipmentID === 3) {
+						// Update Treadmill card
+						const treadmillCard = document.querySelector('a.card-link[href="page3.html"] .card');
+						if (treadmillCard) {
+							treadmillCard.querySelector('h2').textContent = "Treadmill (" + sensor.rpm + " RPM)";
+							treadmillCard.querySelector('.label').textContent = sensor.voltage + " V";
+						}
+					}
+				});
+			})
+			.catch(err => console.error("Error fetching data:", err));
+	</script>
 </body>
+
 </html>
