--- a/members.html
+++ b/members.html
@@ -28,7 +28,9 @@
 				</ul>
 			</li>
 			<li><a href="#" class="active"><i class='bx bxs-widget icon'></i> Members</a></li>
-			<li><a href="#"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="page1.html"><i class='bx bxs-widget icon'></i> Total Energy Generated</a></li>
+
 
 
 		</ul>
