--- a/page1.html
+++ b/page1.html
@@ -26,6 +26,8 @@
       </li>
       <li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
       <li><a href="rewards.html"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="page1.html" class="active"><i class='bx bxs-widget icon'></i> Total Energy Generated</a></li>
+
     </ul>
   </section>
   <!-- SIDEBAR -->
@@ -164,37 +166,7 @@
     // Store timestamps to prevent duplicate rows
     const seenTimestamps = new Set();
 
-    function appendRows(data) {
-      // Ensure data is always an array
-      if (!Array.isArray(data)) {
-        data = [data];
-      }
-
-      const tbody = document.getElementById('data-body');
-
-      data.forEach(item => {
-        // Create a unique key for each row (equipmentID + timestamp)
-        const uniqueKey = `${item.Equipment_ID}-${item.Timestamp}`;
-
-        if (!seenTimestamps.has(uniqueKey)) {
-          seenTimestamps.add(uniqueKey);
-
-          // Create a new row
-          const row = document.createElement('tr');
-          row.innerHTML = `
-                    <td>${tbody.rows.length + 1}</td>
-                    <td>${item.Equipment_ID}</td>
-                    <td>${item.RPM_rev_min}</td>
-                    <td>${item.Voltage_V}</td>
-                    <td>${item.Timestamp}</td>
-                    <td>${item.Temperature_C}</td>
-                    <td>${item.Current_A}</td>
-                    <td>${item.Energy_Wh}</td> 
-                `;
-          tbody.appendChild(row);
-        }
-      });
-    }
+    
 
     // Fetch data every 3 seconds without clearing the table
     async function fetchData() {
