--- a/rewards.html
+++ b/rewards.html
@@ -30,6 +30,8 @@
 			</li>
 			<li><a href="members.html"><i class='bx bxs-widget icon'></i> Members</a></li>
 			<li><a href="#" class="active"><i class='bx bxs-widget icon'></i> Rewards</a></li>
+			<li><a href="page1.html"><i class='bx bxs-widget icon'></i> Total Energy Generated</a></li>
+
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
